frontend/tmc-management-react/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmc-management-react-svc
  namespace: development
spec:
  selector:
    app: tmc-management-react
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
